// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlayEditorPage /> renders correctly  with a currentPlay 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "height": 833.75,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "height": 833.75,
              "width": 750,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#232b2b",
                  "borderWidth": 1,
                  "position": "absolute",
                },
                Object {
                  "height": 708.6875,
                  "left": 712.5,
                  "top": 41.6875,
                  "width": 3.375,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#232b2b",
                  "borderWidth": 1,
                  "position": "absolute",
                },
                Object {
                  "height": 708.6875,
                  "left": 37.5,
                  "top": 41.6875,
                  "width": 3.375,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#232b2b",
                  "borderWidth": 1,
                  "position": "absolute",
                },
                Object {
                  "height": 3.375,
                  "left": 37.5,
                  "top": 41.6875,
                  "width": 675,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#232b2b",
                  "borderWidth": 1,
                  "position": "absolute",
                },
                Object {
                  "height": 3.375,
                  "left": 37.5,
                  "top": 325.1625,
                  "width": 675,
                },
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 33.75,
                },
                Array [
                  Object {
                    "color": "#A6A6A6",
                    "position": "absolute",
                  },
                  Object {
                    "left": 358.125,
                    "top": 541.1375,
                  },
                ],
                Object {
                  "fontFamily": "material-community",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          height="100%"
          style={
            Object {
              "left": 0,
              "position": "absolute",
              "top": 0,
            }
          }
          width="100%"
        />
      </View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingHorizontal": 10,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
                "opacity": 1,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#232b2b",
                    "fontSize": 42,
                  },
                  undefined,
                  Object {
                    "fontFamily": "material-community",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "marginVertical": 10,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "gray",
                    "height": 5,
                    "position": "absolute",
                    "top": 10,
                  },
                  Object {
                    "width": 307.5,
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "height": 5,
                  "position": "absolute",
                  "top": 10,
                  "width": 0,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "gray",
                    "borderRadius": 15,
                    "height": 15,
                    "position": "absolute",
                    "top": 5,
                    "width": 15,
                  },
                  Object {
                    "left": 0,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "gray",
                    "borderRadius": 15,
                    "height": 15,
                    "position": "absolute",
                    "top": 5,
                    "width": 15,
                  },
                  Object {
                    "left": 307.5,
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderRadius": 15,
                  "height": 15,
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 5,
                  "width": 15,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderRadius": 15,
                  "height": 15,
                  "left": 307.5,
                  "opacity": 0,
                  "position": "absolute",
                  "top": 5,
                  "width": 15,
                }
              }
            />
            <Text
              style={
                Array [
                  Object {
                    "position": "absolute",
                    "top": 25,
                  },
                  Object {
                    "left": 3,
                  },
                ]
              }
            >
              1
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "position": "absolute",
                    "top": 25,
                  },
                  Object {
                    "left": 310.5,
                  },
                ]
              }
            >
              2
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "height": "100%",
                  "left": -7.5,
                  "opacity": 1,
                  "position": "absolute",
                  "width": 30,
                }
              }
            />
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "height": "100%",
                  "left": 300,
                  "opacity": 1,
                  "position": "absolute",
                  "width": 30,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#232b2b",
                      "fontSize": 30,
                    },
                    undefined,
                    Object {
                      "fontFamily": "material-community",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#232b2b",
                      "fontSize": 30,
                    },
                    undefined,
                    Object {
                      "fontFamily": "material-community",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 80,
          "marginHorizontal": 30,
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-around",
          }
        }
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Object {
              "marginRight": 10,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textAlignVertical": "center",
                },
                Object {
                  "backgroundColor": "#2a9e91",
                },
                Object {
                  "borderRadius": 0,
                  "height": 0,
                  "width": 0,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "bold",
                }
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Object {
              "marginRight": 10,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textAlignVertical": "center",
                },
                Object {
                  "backgroundColor": "#9d9d9d",
                },
                Object {
                  "borderRadius": 0,
                  "height": 0,
                  "width": 0,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "bold",
                }
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Object {
              "marginRight": 10,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderColor": "black",
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textAlignVertical": "center",
                },
                Object {
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 0,
                  "width": 0,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontWeight": "bold",
                }
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Object {
              "marginRight": 10,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderBottomColor": "#feae19",
                  "borderColor": "transparent",
                  "borderStyle": "solid",
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textAlignVertical": "center",
                },
                Object {
                  "borderBottomWidth": 0,
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "height": 0,
                  "width": 0,
                }
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "height": 80,
              "width": 150,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Rectangle",
                  "textColor": undefined,
                  "value": "rectangle",
                },
                Object {
                  "label": "Endzone",
                  "textColor": undefined,
                  "value": "endzone",
                },
                Object {
                  "label": "3/4 field",
                  "textColor": undefined,
                  "value": "three quarters field",
                },
                Object {
                  "label": "Empty",
                  "textColor": undefined,
                  "value": "empty",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={1}
            style={
              Array [
                Object {
                  "height": 216,
                },
                Object {
                  "fontSize": 14,
                  "height": 80,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<PlayEditorPage /> renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "height": 833.75,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "height": 833.75,
              "width": 750,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#232b2b",
                  "borderWidth": 1,
                  "position": "absolute",
                },
                Object {
                  "height": 708.6875,
                  "left": 712.5,
                  "top": 41.6875,
                  "width": 3.375,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#232b2b",
                  "borderWidth": 1,
                  "position": "absolute",
                },
                Object {
                  "height": 708.6875,
                  "left": 37.5,
                  "top": 41.6875,
                  "width": 3.375,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#232b2b",
                  "borderWidth": 1,
                  "position": "absolute",
                },
                Object {
                  "height": 3.375,
                  "left": 37.5,
                  "top": 41.6875,
                  "width": 675,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#232b2b",
                  "borderWidth": 1,
                  "position": "absolute",
                },
                Object {
                  "height": 3.375,
                  "left": 37.5,
                  "top": 325.1625,
                  "width": 675,
                },
              ]
            }
          />
          <Text />
        </View>
        <View
          height="100%"
          style={
            Object {
              "left": 0,
              "position": "absolute",
              "top": 0,
            }
          }
          width="100%"
        />
      </View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingHorizontal": 10,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
                "opacity": 1,
              }
            }
          >
            <Text />
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "marginVertical": 10,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "gray",
                    "height": 5,
                    "position": "absolute",
                    "top": 10,
                  },
                  Object {
                    "width": 307.5,
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "height": 5,
                  "position": "absolute",
                  "top": 10,
                  "width": 0,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "gray",
                    "borderRadius": 15,
                    "height": 15,
                    "position": "absolute",
                    "top": 5,
                    "width": 15,
                  },
                  Object {
                    "left": 0,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "gray",
                    "borderRadius": 15,
                    "height": 15,
                    "position": "absolute",
                    "top": 5,
                    "width": 15,
                  },
                  Object {
                    "left": 307.5,
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderRadius": 15,
                  "height": 15,
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 5,
                  "width": 15,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderRadius": 15,
                  "height": 15,
                  "left": 307.5,
                  "opacity": 0,
                  "position": "absolute",
                  "top": 5,
                  "width": 15,
                }
              }
            />
            <Text
              style={
                Array [
                  Object {
                    "position": "absolute",
                    "top": 25,
                  },
                  Object {
                    "left": 3,
                  },
                ]
              }
            >
              1
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "position": "absolute",
                    "top": 25,
                  },
                  Object {
                    "left": 310.5,
                  },
                ]
              }
            >
              2
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "height": "100%",
                  "left": -7.5,
                  "opacity": 1,
                  "position": "absolute",
                  "width": 30,
                }
              }
            />
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "height": "100%",
                  "left": 300,
                  "opacity": 1,
                  "position": "absolute",
                  "width": 30,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text />
            </View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 80,
          "marginHorizontal": 10,
          "marginTop": 10,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "grey",
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 80,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 2,
            },
            Object {
              "transform": Array [
                Object {
                  "scale": 0,
                },
              ],
            },
          ]
        }
      >
        <Text />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "left": 0,
              "marginLeft": 0,
              "position": "absolute",
              "top": 0,
              "zIndex": 1,
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "height": 80,
              "width": 120,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Rectangle",
                  "textColor": undefined,
                  "value": "rectangle",
                },
                Object {
                  "label": "Endzone",
                  "textColor": undefined,
                  "value": "endzone",
                },
                Object {
                  "label": "3/4 field",
                  "textColor": undefined,
                  "value": "three quarters field",
                },
                Object {
                  "label": "Empty",
                  "textColor": undefined,
                  "value": "empty",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={1}
            style={
              Array [
                Object {
                  "height": 216,
                },
                Object {
                  "fontSize": 14,
                  "height": 80,
                },
              ]
            }
          />
        </View>
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Object {
              "marginRight": 10,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textAlignVertical": "center",
                },
                Object {
                  "backgroundColor": "#2a9e91",
                },
                Object {
                  "borderRadius": 0,
                  "height": 0,
                  "width": 0,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "bold",
                }
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Object {
              "marginRight": 10,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textAlignVertical": "center",
                },
                Object {
                  "backgroundColor": "#9d9d9d",
                },
                Object {
                  "borderRadius": 0,
                  "height": 0,
                  "width": 0,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "bold",
                }
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Object {
              "marginRight": 10,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderColor": "black",
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textAlignVertical": "center",
                },
                Object {
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 0,
                  "width": 0,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontWeight": "bold",
                }
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Object {
              "marginRight": 10,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderBottomColor": "#feae19",
                  "borderColor": "transparent",
                  "borderStyle": "solid",
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textAlignVertical": "center",
                },
                Object {
                  "borderBottomWidth": 0,
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "height": 0,
                  "width": 0,
                }
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "marginRight": 10,
                "opacity": 1,
              }
            }
          >
            <Text />
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
